extern/Hexapod/win_32/hxp_drivers.bas

Declare Function HardwareInternalListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal InternalHardwareList As String) As Integer '  Internal hardware list
Declare Function HardwareDriverAndStageGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PlugNumber As Integer, ByVal DriverName As String, ByVal StageName As String) As Integer '  Smart hardware
Declare Function HexapodTrajectoryListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal list As String) As Integer '  Hexapod trajectory type list
Declare Function ObjectsListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal ObjectsList As String) As Integer '  Group name and positioner name
Declare Function PositionerErrorListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerErrorList As String) As Integer '  Positioner error list
Declare Function PositionerHardwareStatusListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerHardwareStatusList As String) As Integer '  Positioner hardware status list
Declare Function PositionerDriverStatusListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerDriverStatusList As String) As Integer '  Positioner driver status list
Declare Function ReferencingActionListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal list As String) As Integer '  Get referencing action list
Declare Function ReferencingSensorListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal list As String) As Integer '  Get referencing sensor list
Declare Function GatheringUserDatasGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, UserData1 As Double, UserData2 As Double, UserData3 As Double, UserData4 As Double, UserData5 As Double, UserData6 As Double, UserData7 As Double, UserData8 As Double) As Integer '  Return UserDatas values
Declare Function ControllerMotionKernelPeriodMinMaxGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, MinimumCorrectorPeriod As Double, MaximumCorrectorPeriod As Double, MinimumProfilerPeriod As Double, MaximumProfilerPeriod As Double, MinimumServitudesPeriod As Double, MaximumServitudesPeriod As Double) As Integer '  Get controller motion kernel min/max periods
Declare Function ControllerMotionKernelPeriodMinMaxReset Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Reset controller motion kernel min/max periods
Declare Function TestTCP Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal InputString As String, ByVal ReturnString As String) As Integer '  Test TCP/IP transfert
Declare Function PrepareForUpdate Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Kill QNX processes for firmware update
